implement: UC-4 + 6